# SemperVigil

./: .env.example  .gitignore  ARCHITECHTURE.md  BASE_CONTEXT.md  CODEX_RULES.md  README.md  SETTINGS_UI_MODEL.md  build-site.sh  config.example.yml  docker-compose.yml  pyproject.toml  recycle.sh
config/: sources.example.yml
docker/builder/: Dockerfile
docker/ingest/: Dockerfile
docs/: ADMIN_UI.md  ARCHITECTURE.md  BASE_CONTEXT.md  CODEX_RULES.md  CVE_MODEL.md  DATA_MODEL.md  EVENT_MODEL.md  IMPLEMENTATION_PLAN.md  LINKING_MODEL.md  NEXT_STEP_PLAN.md  PIPELINES.md  README.md  TARGET-STATE.md  index.md
scripts/: migrate_sqlite_to_postgres.py
src/sempervigil/: __init__.py  admin.py  admin_ui.py  builder.py  cli.py  config.py  cve_filters.py  cve_sync.py  db.py  (+14 more)
tests/: conftest.py  test_admin_ai_api.py  test_admin_analytics.py  test_admin_config_api.py  test_admin_content_search.py  test_admin_cves_api.py  test_admin_danger.py  test_admin_events_api.py  test_admin_import.py  test_admin_sources_api.py  test_admin_ui_auth.py  test_ai_service_secrets.py  test_builder_job.py  test_config.py  test_cve_extract.py  test_cve_parsing.py  test_cve_persist.py  test_cve_settings.py  test_cve_sync.py  test_events.py  test_fetch_article_retry.py  test_fetch_pipeline.py  test_health.py  test_ignore_dedupe.py  test_ingest_decision.py  test_job_runner_once.py  test_jobs.py  test_json_dumps.py  test_logging_idempotent.py  test_markdown_writer.py  test_migrations_idempotent.py  test_pipeline_ordering.py  test_policy.py  test_publish_frontmatter.py  test_published_at_source.py  test_secrets.py  test_smoke_test.py  test_source_health_history.py  test_tagger.py  test_utils.py  (+1 more)
tools/: ensure-dirs.sh  hugo-build.sh  init_paths.sh
(+64 files in other folders)
