[project]
name = "sempervigil"
version = "0.1.0"
description = "SemperVigil ingestion pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0" }
authors = [{ name = "SemperVigil" }]
dependencies = [
  "feedparser>=6.0.11",
  "fastapi>=0.110",
  "jinja2>=3.1.3",
  "jsonschema>=4.21.1",
  "PyYAML>=6.0.1",
  "uvicorn>=0.27",
  "cryptography>=42.0.5",
  "beautifulsoup4>=4.12.3",
  "psycopg[binary]>=3.1.18",
]

[project.optional-dependencies]
test = ["pytest>=7.4", "httpx>=0.25"]

[project.scripts]
sempervigil = "sempervigil.cli:main"
sempervigil-worker = "sempervigil.worker:main"
sempervigil-builder = "sempervigil.builder:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sempervigil = ["templates/**/*.html", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
